# Task_Allocation

./: README.md  collision_tests.txt
Patrick/task_allocation/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ball/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ball/include/: ball.h
ball/src/: ball.cpp
common/: common.h
hand_commands/: CMakeLists.txt  package.xml
hand_commands/include/: commands.h
hand_commands/src/: commands.cpp
interactive_marker/: CMakeLists.txt  package.xml
interactive_marker/src/: interactive_target.py  interactive_target.py~
intercept_finder/: CMakeLists.txt~  package.xml  package.xml~
intercept_finder/include/: PATH.h  finder.h
intercept_finder/src/: finder.cpp
mocap_optitrack/config/: epfl.yaml
motion_prediction/: CMakeLists.txt~  package.xml~
motion_prediction/src/: TrajectoryEstimation.cpp
multiarm_ds/include/: multiarm_ds.h
multiarm_ds/src/: multiarm_ds.cpp
object_recognition/: CMakeLists.txt  package.xml
object_recognition/src/: Object_positions.cpp
position_of_the_robots/: CMakeLists.txt  package.xml
position_of_the_robots/src/: positions.cpp
qp_ik_solver/include/: qp_ik_solver.h
qp_ik_solver/src/: qp_ik_solver.cpp
sg_differentiation/: CMakeLists.txt  package.xml
sg_differentiation/src/: Filtering.cpp
simple_example_two_kuka/: CMakeLists.txt~  package.xml  package.xml~
simple_example_two_kuka/config/: Scenario.xml  test.xml
task_allocation/: CMakeLists.txt  CMakeLists.txt~  package.xml
using_markers/: CMakeLists.txt  CMakeLists.txt~  package.xml
(+34 files in other folders)
